--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!--maincontent-->
     <main>
         <div class="alert success">
-            <strong><h3>This week's trivia will be hosted by Team Animals on 13/11/2020</h3></strong>
+            <strong><h3>This week's trivia will be hosted by 007 on 13/11/2020</h3></strong>
         </div>
         <div class='container'>
             <table class="table">
@@ -43,23 +43,23 @@
                 </tr>
                 <tr>
                     <td>Animals</td>
-                    <td>13/11/2020</td>
+                    <td>20/11/2020</td>
                     <td>24/30</td>
                 </tr>
                 <tr>
                     <td>Breaking build</td>
-                    <td>20/11/2020</td>
+                    <td>27/11/2020</td>
                     <td>20/30</td>
                 </tr>
                 <tr>
                     <td>Cherminators</td>
-                    <td>27/11/2020</td>
+                    <td>04/12/2020</td>
                     <td>22/30</td>
                 </tr>
                 <tr>
-                    <td>Expendables</td>
-                    <td>04/11/2020</td>
-                    <td>18/25</td>
+                    <td>TBC</td>
+                    <td>11/12/2020</td>
+                    <td></td>
                 </tr>
             </table>
         </div>
