--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>DDS Launchpad</title>
+    <title>DDS Trivia</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css\main.css" rel="stylesheet">
     <link href="img\favicon.ico" rel="shortcut icon" />
@@ -65,17 +65,31 @@
         </div>
         <div class="container ">
             <div class="resetstuff">
-                <button id="reset " class="button button2 " type="button " onclick="resetAll()">Reset</button>
-                <button id="clearcache " class="button button3 " type="button " onclick="clearItem()">Add items</button>
+                <button id="reset" class="button button2 " type="button " onclick="resetAll()">Reset</button>
+                <button id="additem" class="button button3 " type="button " onclick="addItem()">Add items</button>
             </div>
             <div class="launching">
                 <button id="launch " class="button button1 " type="button " onclick="clickHandler()"><strong>Update</strong></button>
+            </div>
+        </div>
+
+        <div id="popup1" class="overlay">
+            <div class="popup">
+                <h2>Add item</h2>
+                <a class="close">x</a>
+                <div class="container">
+                <div class="content-1">
+                    <h4>Tean name</h4>
+                    <textarea rows="1" cols="60" class="abn" type="number" id="abn" pattern="[0-9]" maxlength="11" onkeydown="checkInput(this)" id="abn" name="abn" title="abn"></textarea>
+                </div>
+            </div>
             </div>
         </div>
     </main>
     <!--footer-->
     <footer>
     </footer>
+    <script src="js/app.js" type="text/javascript"></script>
 </body>
 
 </html>
