--- a/index.html
+++ b/index.html
@@ -30,6 +30,22 @@
             <strong><h3>This week's trivia will be hosted by 007 on 13/11/2020</h3></strong>
         </div>
         <div class='container'>
+            <table id="table1" class="table">
+                <tr>
+                    <th id="th2">Last week's podium!</th>
+                </tr>
+                <tr>
+                    <td>1st place with 25 points - 007</td>
+                </tr>
+                <tr>
+                    <td>2nd place with 24 points - Animals</td>
+                </tr>
+                <tr>
+                    <td>3rd place with 23 points - UNO</td>
+                </tr>
+            </table>
+        </div>
+        <div  class='container'>
             <table class="table">
                 <tr>
                     <th>Team name</th>
