--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!--maincontent-->
     <main>
         <div class="alert success">
-            <strong><h3>This week's trivia will be hosted by 007 on 13/11/2020</h3></strong>
+            <strong><h3>This week's trivia will be hosted by Animals on 04/12/2020</h3></strong>
         </div>
         <div class='container'>
             <table id="table1" class="table">
@@ -35,13 +35,13 @@
                     <th id="th2">Last week's podium!</th>
                 </tr>
                 <tr>
-                    <td>1st place with 25 points - 007</td>
+                    <td>1st place with 28 points - Justice League</td>
                 </tr>
                 <tr>
-                    <td>2nd place with 24 points - Animals</td>
+                    <td>2nd place with 27.5 points - Magnum & Mafia</td>
                 </tr>
                 <tr>
-                    <td>3rd place with 23 points - UNO</td>
+                    <td>3rd place with 23 points - Expendables & Breaking build</td>
                 </tr>
             </table>
         </div>
@@ -58,24 +58,24 @@
                     <td>24/30</td>
                 </tr>
                 <tr>
-                    <td>Animals</td>
+                    <td>Cherminators</td>
                     <td>20/11/2020</td>
                     <td>24/30</td>
                 </tr>
                 <tr>
-                    <td>Breaking build</td>
+                    <td>Nirvana</td>
                     <td>27/11/2020</td>
                     <td>20/30</td>
                 </tr>
                 <tr>
-                    <td>Cherminators</td>
+                    <td>Animals</td>
                     <td>04/12/2020</td>
                     <td>22/30</td>
                 </tr>
                 <tr>
-                    <td>TBC</td>
+                    <td>UNO</td>
                     <td>11/12/2020</td>
-                    <td></td>
+                    <td>24/30</td>
                 </tr>
             </table>
         </div>
