--- a/index.html
+++ b/index.html
@@ -91,11 +91,11 @@
 
         <div id="popup1" class="overlay">
             <div class="popup">
-                <h2>Add item</h2>
+                <h2>Add item - TBC</h2>
                 <a class="close">x</a>
                 <div class="container">
                 <div class="content-1">
-                    <h4>Tean name</h4>
+                    <h4>Team name</h4>
                     <textarea rows="1" cols="60" class="abn" type="number" id="abn" pattern="[0-9]" maxlength="11" onkeydown="checkInput(this)" id="abn" name="abn" title="abn"></textarea>
                 </div>
             </div>
